Changes in version 0.9.4

o UPDATE: Added output of the average replication of items in each dimension for `itemStability`

o UPDATE: Revised 'Network Scores' vignette

o UPDATE: `dimStability` now computes proportion of exact dimension replications rather than items that replicate within dimension

o UPDATE: `net.loads` functionality (cleaned up code)

o UPDATE: S3Methods for `net.loads`

o FIX: `net.scores` negative loadings corrected


Changes in version 0.9.3

o New function and print, summary and plot methods: dynEGA

o New functions: Embed and glla


Changes in version 0.9.2

o UPDATE: add latent variable scores comparison to `net.scores` vignette

o UPDATE: `node.redundant.combine` sets loadings equal to 1 when there are only two variables when the argument type = "latent"; warning also added from type = "sum"

o FIX: `node.redundant` alpha types bug

o updated `itemStability` (bug fixes)

o updated `node.redundant.combine` (bug fixes, latent variable option)

o major bug fix in `net.loads`: corrected loadings greater than 1 when there were many negative values

o added `EGA.estimate` to clean up `EGA` code and allow for future implementations of different network estimation methods and community detection algorithms

o updated `EGA` functionality: message for 'gamma' value used and `EGA.estimate` compatiability

o removed *iterators* dependency

o ordering and name fix in `net.loads`

o auto-adjusts y-axis label size for `itemStability` plot based on number of nodes or length of node names

o `net.loads` adjusted for larger values using absolute values and applying the sign afterwards

o reverse coding update in `net.loads`

o `node.redundant.combine` bug fix for reverse coding latent variables

o added Louvain community detection to all EGA functions in *EGAnet*

o functionality updates to `node.redundant`

o swapped arguments 'type' and 'method' in the `node.redundant` function (fixed examples in other node.redundant functions)

o updated citation

