@@ -1,5 +1,9 @@
 Changes in version 0.9.4
 
+o FIX: ordering of names in `itemStability`
+
+o FIX: handling of NA communities in `net.loads`
+
 o UPDATE: Added output of the average replication of items in each dimension for `itemStability`
 
 o UPDATE: Revised 'Network Scores' vignette
